--- a/OnePiece WebRipper/OnePiece WebRipper.csproj
+++ b/OnePiece WebRipper/OnePiece WebRipper.csproj
@@ -83,6 +83,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RipLib\RipLib.csproj">
+      <Project>{e3fd65db-7308-4929-9d0b-6d5629d910ec}</Project>
+      <Name>RipLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
